attempt #2 to fix mobile layout issue + minor change in some js text

--- a/global.css
+++ b/global.css
@@ -47,8 +47,8 @@ body {
   align-items: center;
 }
 .content img {
-  width: 400px;
-  height: 300px;
+  width: 376px;
+  height: 282px;
   margin: 15px 0;
 }
 .content h1 {
